# KWarBots

./: AUTHORS  CMakeLists.txt  README.md  TODO  compile.sh  kwarbots.shell
data/items/: ammo.svgz  energy.svgz  weapon.svgz
data/maps/: map.map
data/robots/botpacks/: tank-0.bpack
data/robots/graphics/: tank-0.svgz
data/textures/: block01.svgz  block02.svgz  block03.svgz  terrain01.svgz  terrain02.svgz  terrain03.svgz  terrain04.svgz  terrain05.svgz  tile01.svgz  tile02.svgz  tile03.svgz  tile04.svgz  wall01.svgz  wall02.svgz  water01.svgz
src/: CMakeLists.txt  ammoitem.cpp  ammoitem.h  animation.cpp  animation.h  battlearea.cpp  battlearea.h  blockobject.cpp  blockobject.h  botpack.cpp  botpack.h  bulletobject.cpp  bulletobject.h  energyitem.cpp  energyitem.h  game.cpp  game.h  imageloader.cpp  imageloader.h  main.cpp  map.cpp  map.h  menu.cpp  menu.h  object.cpp  object.h  robot.cpp  robot.h  robot.py  robotobject.cpp  robotobject.h  shared.h  terrainobject.cpp  terrainobject.h  tileobject.cpp  tileobject.h  wallobject.cpp  wallobject.h  waterobject.cpp  waterobject.h  (+2 more)
